@@ -14,7 +14,9 @@
 	 * design will likely be revisited.
 	 */
         if (antimagic == 0) {
-                pseudo_client_op(OP_EXEC, PSA_EXEC, -1, -1, file, 0);
+		char *path_guess = pseudo_exec_path(file, 0);
+                pseudo_client_op(OP_EXEC, PSA_EXEC, -1, -1, path_guess, 0);
+		free(path_guess);
         }
 
 	if (!pseudo_get_value("PSEUDO_RELOADED"))
